@@ -6,13 +6,25 @@
 
   var pattern_assembler = function(){
 
-    function exportPatterns(patternlab){
+    function setState(pattern, patternlab){
+      if(patternlab.config.patternStates[pattern.patternName]){
+        pattern.patternState = patternlab.config.patternStates[pattern.patternName];
+      } else{
+        pattern.patternState = "";
+      }
+    }
 
+    function addPattern(pattern, patternLab){
+      patternLab.data.link[pattern.patternGroup + '-' + pattern.patternName] = '/patterns/' + pattern.patternLink;
+      patternLab.patterns.push(pattern);
     }
 
     return {
-      export_patterns: function(patternlab){
-        exportPatterns(patternlab);
+      setPatternState: function(pattern, patternlab){
+        setState(pattern, patternlab);
+      },
+      addPattern: function(pattern, patternLab){
+        addPattern(pattern, patternLab);
       }
     };
 
